Fix alignment of slides

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -195,6 +195,7 @@
     #slides {
         font-size: $base-font-size;
         float: right;
+        margin-top: -5px;
     }
 
     #abstract {
